--- a/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
+++ b/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div id="dashboard-page" class="container-fluid">
   <div class="row">
     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
       <card>
@@ -6,7 +6,35 @@
           <h4 class="card-title">Locações Atrazadas</h4>
         </div>
         <div class="card-body">
-          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+        </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+        </div>
+      </card>
+    </div>
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <card>
+        <div class="card-header">
+          <h4 class="card-title">Locações aguardando faturamento</h4>
+        </div>
+        <div class="card-body">
+          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesNaoFaturada"></dg-table>
+        </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesNaoFaturada"></dg-paginator>
+        </div>
+      </card>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <card>
+        <div class="card-header">
+          <h4 class="card-title">Locações começando em 20 dias</h4>
+        </div>
+        <div class="card-body">
+          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
         </div>
         <div class="card-footer">
           <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
@@ -19,38 +47,10 @@
           <h4 class="card-title">Locações vencendo em 20 dias</h4>
         </div>
         <div class="card-body">
-          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesVencendo"></dg-table>
         </div>
         <div class="card-footer">
-          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
-        </div>
-      </card>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-      <card>
-        <div class="card-header">
-          <h4 class="card-title">Locações aguardando faturamento</h4>
-        </div>
-        <div class="card-body">
-          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
-        </div>
-        <div class="card-footer">
-          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
-        </div>
-      </card>
-    </div>
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-      <card>
-        <div class="card-header">
-          <h4 class="card-title">Locações começando em 20 dias</h4>
-        </div>
-        <div class="card-body">
-          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
-        </div>
-        <div class="card-footer">
-          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesVencendo"></dg-paginator>
         </div>
       </card>
     </div>
