criando faturamento de locação

--- a/src/app/pages/private/lancamentos/lancamentos-main/lancamentos-main.component.html
+++ b/src/app/pages/private/lancamentos/lancamentos-main/lancamentos-main.component.html
@@ -56,6 +56,6 @@
 </page-footer>
 
 
-<subComponent-modal-lancamento (afterSave)="table.find()" #modalLancamentos></subComponent-modal-lancamento>
+<modal-lancamento (afterSave)="table.find()" #modalLancamentos></modal-lancamento>
 
 <modal-baixar #modalBaixar (afterSave)="table.find()"></modal-baixar>
