--- a/src/app/pages/private/locacao/locacao-main/locacao-main.component.html
+++ b/src/app/pages/private/locacao/locacao-main/locacao-main.component.html
@@ -140,3 +140,5 @@
 <page-footer>
   <button class="btn btn-success" [routerLink]="'novo'">Adicionar</button>
 </page-footer>
+
+<modal-lancamento #modalLancamento></modal-lancamento>
