finalizando tela de locação e seus fluxos

--- a/src/app/pages/private/locacao/locacao-insert-edit/locacao-insert-edit.component.html
+++ b/src/app/pages/private/locacao/locacao-insert-edit/locacao-insert-edit.component.html
@@ -12,10 +12,11 @@
               <dg-autocomplete
                 formControlName="cliente"
                 typeFilter="outside"
-                [data]="listClientes"
                 key="id"
                 label="nome"
                 classes="form-control"
+                (searchFilterValue)="this.findCliente($event)"
+                [data]="listClientes"
               ></dg-autocomplete>
             </div>
             <div class="col-4">
