--- a/src/app/pages/private/lancamentos/sub-components/modal-lancamento/modal-lancamento.component.html
+++ b/src/app/pages/private/lancamentos/sub-components/modal-lancamento/modal-lancamento.component.html
@@ -9,17 +9,20 @@
       <div class="row">
         <div class="col-12">
           <label>Cliente</label>
-          <select formControlName="cliente" class="form-select">
-            <option value="" disabled selected>Selecione um cliente</option>
-            <option *ngFor="let c of listClientes" [value]="c.id">{{c.nome}}</option>
-          </select>
+          <dg-autocomplete
+            classes="form-control"
+            formControlName="cliente"
+            key="id"
+            label="nome"
+            [data]="listClientes"
+          ></dg-autocomplete>
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
           <label>Valor</label>
-          <input class="form-control" formControlName="valor">
+          <input class="form-control" formControlName="total">
         </div>
         <div class="col-6">
           <label>Vencimento</label>
