--- a/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
+++ b/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
@@ -34,10 +34,10 @@
           <h4 class="card-title">Locações começando em 20 dias</h4>
         </div>
         <div class="card-body">
-          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesComecando"></dg-table>
         </div>
         <div class="card-footer">
-          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesComecando"></dg-paginator>
         </div>
       </card>
     </div>
@@ -56,3 +56,5 @@
     </div>
   </div>
 </div>
+
+<modal-lancamento #modalLancamento></modal-lancamento>
