--- a/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
+++ b/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
@@ -27,34 +27,34 @@
       </card>
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-      <card>
-        <div class="card-header">
-          <h4 class="card-title">Locações começando em 20 dias</h4>
-        </div>
-        <div class="card-body">
-          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesComecando"></dg-table>
-        </div>
-        <div class="card-footer">
-          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesComecando"></dg-paginator>
-        </div>
-      </card>
-    </div>
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-      <card>
-        <div class="card-header">
-          <h4 class="card-title">Locações vencendo em 20 dias</h4>
-        </div>
-        <div class="card-body">
-          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesVencendo"></dg-table>
-        </div>
-        <div class="card-footer">
-          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesVencendo"></dg-paginator>
-        </div>
-      </card>
-    </div>
-  </div>
+<!--  <div class="row mt-3">-->
+<!--    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">-->
+<!--      <card>-->
+<!--        <div class="card-header">-->
+<!--          <h4 class="card-title">Locações começando em 20 dias</h4>-->
+<!--        </div>-->
+<!--        <div class="card-body">-->
+<!--          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesComecando"></dg-table>-->
+<!--        </div>-->
+<!--        <div class="card-footer">-->
+<!--          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesComecando"></dg-paginator>-->
+<!--        </div>-->
+<!--      </card>-->
+<!--    </div>-->
+<!--    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">-->
+<!--      <card>-->
+<!--        <div class="card-header">-->
+<!--          <h4 class="card-title">Locações vencendo em 20 dias</h4>-->
+<!--        </div>-->
+<!--        <div class="card-body">-->
+<!--          <dg-table classes="table-locacao" dg-dynamic-table [dynamicTable]="locacoesVencendo"></dg-table>-->
+<!--        </div>-->
+<!--        <div class="card-footer">-->
+<!--          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesVencendo"></dg-paginator>-->
+<!--        </div>-->
+<!--      </card>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
 
 <modal-lancamento #modalLancamento></modal-lancamento>
