--- a/src/app/pages/private/dashboard/sub-components/dashboard-locacoes/dashboard-locacoes.component.html
+++ b/src/app/pages/private/dashboard/sub-components/dashboard-locacoes/dashboard-locacoes.component.html
@@ -1,6 +1,26 @@
 <div id="dashboard-page" class="container-fluid">
   <div class="row">
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+    <div class="col-12 d-inline-flex justify-content-start">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <span class="nav-link" (click)="tabelaExibicao = 'atrasadas'" [class.active]="tabelaExibicao == 'atrasadas'">Locações Atrazadas</span>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link" (click)="tabelaExibicao = 'faturamento'" [class.active]="tabelaExibicao == 'faturamento'">Locações aguardando faturamento</span>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link" (click)="tabelaExibicao = 'comecando'" [class.active]="tabelaExibicao == 'comecando'">Locações começando</span>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link" (click)="tabelaExibicao = 'vencendo'" [class.active]="tabelaExibicao == 'vencendo'">Locações vencendo</span>
+        </li>
+      </ul>
+    </div>
+    <hr>
+  </div>
+
+  <div [hidden]="tabelaExibicao != 'atrasadas'" class="row">
+    <div class="col-12">
       <card>
         <div class="card-header">
           <h4 class="card-title">Locações Atrazadas</h4>
@@ -13,7 +33,9 @@
         </div>
       </card>
     </div>
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+  </div>
+  <div [hidden]="tabelaExibicao != 'faturamento'" class="row">
+    <div class="col-12">
       <card>
         <div class="card-header">
           <h4 class="card-title">Locações aguardando faturamento</h4>
@@ -27,8 +49,9 @@
       </card>
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+
+  <div [hidden]="tabelaExibicao != 'comecando'" class="row mt-3">
+    <div class="col-12">
       <card>
         <form [formGroup]="formFiltersComecando">
           <div class="card-header">
@@ -89,7 +112,9 @@
         </div>
       </card>
     </div>
-    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+  </div>
+  <div [hidden]="tabelaExibicao != 'vencendo'" class="row mt-3">
+    <div class="col-12">
       <card>
         <form [formGroup]="formFiltersvencendo">
           <div class="card-header">
